--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
 
-# Test binary, built with `go test -c`
+# Go files
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.sum
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Backup files etc
+.DS_Store
+._*
+
+# Dependency and build
+vendor/
+build/
+
